Feat: added all the paths to the pages and components

--- a/src/components/index.components.css
+++ b/src/components/index.components.css
@@ -2,3 +2,6 @@
 @import url(./Sidebar/Sidebar.css);
 @import url(./Cart/Cart.css);
 @import url(./Footer/Footer.css);
+@import url(./ProductCard/ProductCard.css);
+@import url(./Filters/FilterDesktop/FiltersDesktop.css);
+@import url(./Filters/FilterPhone/FilterPhone.css);
