--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 @import url("https://nucleus-ui.vercel.app/css/components.css");
 @import url("../components/index.components.css");
 @import url("../pages/index.pages.css");
+@import url("../pages/Wishlist/Wishlist.css");
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
