--- a/src/pages/index.pages.css
+++ b/src/pages/index.pages.css
@@ -1,1 +1,4 @@
 @import url(./HomePage/HomePage.css);
+@import url(./ErrorPage/ErrorPage.css);
+@import url(./AboutPage/AboutPage.css);
+@import url(./ProductListingPage/ProductListing.css);
