--- a/src/pages/index.pages.css
+++ b/src/pages/index.pages.css
@@ -1,1 +1,7 @@
 @import url(./HomePage/HomePage.css);
+@import url(./ErrorPage/ErrorPage.css);
+@import url(./AboutPage/AboutPage.css);
+@import url(./ProductListingPage/ProductListing.css);
+@import url(./Wishlist/Wishlist.css);
+@import url(./LoginPage/LoginPage.css);
+@import url(./SignupPage/SignupPage.css);
