Feat: Added products on the products page

--- a/src/pages/ProductListingPage/ProductListing.css
+++ b/src/pages/ProductListingPage/ProductListing.css
@@ -22,102 +22,6 @@
   width: 23rem;
   overflow-y: scroll;
 }
-
-/* note:phone filter */
-.phone-filter {
-  display: none;
-  /* display: grid; */
-  grid-template-columns: 1fr 1fr;
-  width: 100%;
-}
-.phone-filter .phone-filter-btn {
-  font-size: 1.7rem;
-  padding: 2rem 3rem;
-}
-
-/* note: sort container */
-.sort-outer-container {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.3);
-  top: 0;
-  opacity: 0;
-  pointer-events: none;
-  z-index: -1;
-  transition: var(--transition-medium);
-}
-.sort-outer-container.show {
-  pointer-events: all;
-  opacity: 1;
-  z-index: 100000000;
-}
-
-.sort-inner-container {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 25rem;
-  padding: 2rem 4rem;
-  background: var(--clr-white);
-  transform: translateY(100%);
-  transition: var(--transition-medium);
-}
-
-.show .sort-inner-container {
-  transition: var(--transition-medium);
-  transform: translateY(0);
-}
-
-/* note: filter container */
-
-.filter-outer-container {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.3);
-  top: 0;
-  opacity: 0;
-  pointer-events: none;
-  z-index: -1;
-  transition: var(--transition-medium);
-}
-.filter-outer-container.show {
-  pointer-events: all;
-  opacity: 1;
-  z-index: 100000000;
-}
-
-.filter-inner-container {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 25rem;
-  padding: 2rem 4rem;
-  background: var(--clr-white);
-  transform: translateY(100%);
-  transition: var(--transition-medium);
-}
-
-.show .filter-inner-container {
-  transition: var(--transition-medium);
-  transform: translateY(0);
-}
-
-@media only screen and (max-width: 53.125em) {
-  .products-container {
-    padding: 1rem 2rem;
-  }
-  .filter-container {
-    display: none;
-  }
-
-  .phone-filter {
-    display: none;
-    display: grid;
-    position: fixed;
-    bottom: 0;
-    z-index: 10000;
-    background-color: var(--clr-white);
-  }
+.spc-txt {
+  font-family: "Eczar", sans-serif;
 }
