--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 @import url("https://nucleus-ui.vercel.app/components/button/button.css");
 @import url("../components/index.components.css");
 @import url("../pages/index.pages.module.css");
+@import url("../utils/utils.react.css");
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
