--- a/src/pages/ProductListingPage/ProductListing.module.css
+++ b/src/pages/ProductListingPage/ProductListing.module.css
@@ -11,7 +11,12 @@
   width: 100%;
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+}
+.products-container-center {
   place-items: center;
+}
+.products-container-start {
+  place-items: flex-start;
 }
 /* note:filter */
 .filter-container {
