--- a/src/components/index.components.css
+++ b/src/components/index.components.css
@@ -5,3 +5,4 @@
 @import url(./ProductCard/ProductCard.css);
 @import url(./Filters/FilterDesktop/FiltersDesktop.css);
 @import url(./Filters/FilterPhone/FilterPhone.css);
+@import url(./NoProductsFound/NoProductsFound.css);
