--- a/src/pages/Wishlist/Wishlist.module.css
+++ b/src/pages/Wishlist/Wishlist.module.css
@@ -18,9 +18,18 @@
   /* width: 90%; */
   padding: 3rem 4rem;
   gap: 2rem;
-
   /* max-width: 130rem; */
   grid-template-columns: repeat(auto-fit, 30rem);
+}
+
+@media only screen and (max-width: 28.125em) {
+  .products {
+    padding: 0.5rem 1rem;
+    grid-template-columns: 1fr;
+  }
+  .single-product-title {
+    font-size: 2rem;
+  }
 }
 
 .products.more-products {
