--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url("https://unpkg.com/mockman-js@latest/dist/style.css");
+/* @import url("https://unpkg.com/mockman-js@latest/dist/style.css"); */
 @import "react-slideshow-image/dist/styles.css";
 @import url("https://nucleus-ui.vercel.app/css/utils.css");
 @import url("https://nucleus-ui.vercel.app/components/button/button.css");
