--- a/src/components/index.components.css
+++ b/src/components/index.components.css
@@ -6,3 +6,4 @@
 @import url(./Filters/FilterDesktop/FiltersDesktop.css);
 @import url(./Filters/FilterPhone/FilterPhone.css);
 @import url(./NoProductsFound/NoProductsFound.css);
+@import url(./Loader/Loader.css);
