--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -116,6 +116,7 @@
 
 .cart-item-amount {
   margin-bottom: 0;
+  font-weight: 500;
   text-align: center;
   color: var(--clr-grey-3);
   line-height: 1;
@@ -129,4 +130,11 @@
   cursor: pointer;
   font-size: 0.85rem;
   padding: 0.25rem;
+  transition: var(--transition-medium);
+}
+
+.cart-item-increase-btn:hover,
+.cart-item-decrease-btn:hover {
+  transform: scale(1.1);
+  color: var(--clr-grey-1);
 }
