--- a/src/pages/ProductListingPage/ProductListing.module.css
+++ b/src/pages/ProductListingPage/ProductListing.module.css
@@ -12,6 +12,16 @@
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
 }
+
+/* .products-container {
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 1.5rem;
+  gap: 1.5rem;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
+} */
 .products-container-center {
   place-items: center;
 }
