--- a/src/components/index.components.css
+++ b/src/components/index.components.css
@@ -7,3 +7,4 @@
 @import url(./Filters/FilterPhone/FilterPhone.css);
 @import url(./NoProductsFound/NoProductsFound.css);
 @import url(./Loader/Loader.css);
+@import url("./SearchBar/SearchBar.css");
