add admin portal to add products

--- a/src/pages/index.pages.module.css
+++ b/src/pages/index.pages.module.css
@@ -6,3 +6,4 @@
 @import url(./LoginPage/LoginPage.module.css);
 @import url(./SignupPage/SignupPage.module.css);
 @import url(./SingleProduct/SingleProduct.module.css);
+@import url(./Upload/Upload.css);
